# Nagy-hazi-sakk

./: CMakeLists.txt  README.md  boardprt.c  boardprt.h  castling.c  castling.h  chessboardtofen.c  chessboardtofen.h  fen_code_to_chessboard_converter.c  fen_code_to_chessboard_converter.h  fen_linked_list.c  fen_linked_list.h  fentocb.c  fentocb.h  main.c  menu.c  menu.h  piece.h  pseudolegal.c  pseudolegal.h  save_load.c  save_load.h
